# edge-tts-rbnx

./: .gitignore  README.md  rbnx_manifest.yaml
install/: local_setup.sh  setup.sh
install/edge_tts_rbnx/share/edge_tts_rbnx/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
rbnx/: build.sh  start.sh  start_speak.sh  stop.sh  stop_speak.sh
src/edge_tts_rbnx/: edge_tts_rbnx_node.py  package.xml  setup.py  speak_skill.py
